Fix: change grid-gap to gap

--- a/sass/components/_service.scss
+++ b/sass/components/_service.scss
@@ -19,7 +19,7 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
         justify-items: center;
-        grid-gap: 2rem;
+        gap: 2rem;
     }
 
     &__box {
